// Vitest Snapshot v1

exports[`Component: Tabs > ui > hide inactive tabs by CSS 1`] = `
<div>
  <div
    class="tabs"
  >
    <ul
      class="flex-nowrap nav nav-tabs nav-fill"
      style="overflow-y: hidden;"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
        >
          <div
            class="d-flex p-2 justify-content-center"
          >
            active tab
          </div>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
        >
          <div
            class="d-flex p-2 justify-content-center"
          >
            not active tab
          </div>
        </a>
      </li>
    </ul>
    <div
      class="mt-3 tab-content"
    >
      <div
        class="tab-pane active"
      >
        <p>
          test active true
        </p>
      </div>
      <div
        class="tab-pane"
      >
        <p>
          test active false
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: Tabs > ui > hide inactive tabs by removing from dom 1`] = `
<div>
  <div
    class="tabs"
  >
    <ul
      class="flex-nowrap nav nav-tabs nav-fill"
      style="overflow-y: hidden;"
    >
      <li
        class="nav-item"
      >
        <a
          class="nav-link active"
        >
          <div
            class="d-flex p-2 justify-content-center"
          >
            active tab
          </div>
        </a>
      </li>
      <li
        class="nav-item"
      >
        <a
          class="nav-link"
        >
          <div
            class="d-flex p-2 justify-content-center"
          >
            not active tab
          </div>
        </a>
      </li>
    </ul>
    <div
      class="mt-3 tab-content"
    >
      <div
        class="tab-pane active"
      >
        <p>
          test active true
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component: Tabs > ui > should throw an exception if any child is not a Tab component 1`] = `"Tabs: expecting children of Tabs to be of type Tab but got something else"`;
